# cvrp_benchmarker

./: .gitignore  LICENSE  README.md  pyproject.toml
cvrp_benchmarker/: __init__.py  _utility.py  benchmarker.py  cluster_pool.py  exceptions.py  problem.py  runner.py
paper/: citations.bib  paper.tex  proposal.tex  references.bib
tests/: sisr_runner.py  test_benchmark.py  test_runner_init.py
